tests/pass/run/for_binding_parity/main.kira
@Main
function main() {
    var total = 0

    for item in [1, 2, 3] {
        print(item)
        total = total + item
    }

    print(total)
    return
}
