tests/fail/semantics/ownership_let_field_alias_if_unrestored/main.kira
struct Bag {
    var items: [Int]
}

function leak(flag: Bool, bag: Bag) -> Int {
    if flag {
        let alias = bag.items
        return alias.count
    }
    return 0
}

@Main
function main() {
    let bag = Bag { items: [1, 2, 3] }
    print(leak(true, bag))
    return
}
